# cima-MXchip

./: AZ3166.ld  CMakeLists.txt  README.md  cli.bat  init_cmake.bat
cmake/: toolchain.cmake
main/: CMakeLists.txt  CimaMXchip.cpp
